third_party/rust/thiserror/v1/crate/tests/ui/unexpected-field-fmt.stderr
error: not expected here; the #[error(...)] attribute belongs on top of a struct or an enum variant
 --> tests/ui/unexpected-field-fmt.rs:6:9
  |
6 |         #[error("...")]
  |         ^^^^^^^^^^^^^^^
